[package]
name = "facecrab"
version = "0.1.3"
edition = "2021"
authors = ["Timothy Meade"]
license = "MIT"
repository = "https://github.com/tmzt/facecrab"
description = "Asset management and model downloading for AI inference"
keywords = ["ai", "llm", "huggingface", "download", "models"]
categories = ["science", "web-programming"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
surf = "2.3"
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
