[package]
name = "facecrab"
version = "0.1.3"
edition = "2021"
authors = ["Timothy Meade"]
license = "MIT"
repository = "https://github.com/tmzt/facecrab"
description = "Asset management and model downloading for AI inference"
keywords = ["ai", "llm", "huggingface", "download", "models"]
categories = ["science", "web-programming"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "6"
futures = "0.3"
smol = "2"
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "1.0"
url = "2"
log = "0.4"
